Changed a whole bunch of things.
Not pleased with the changes I made first, I have removed some of
them to make new and better one.

Electives are back, along with debates and Torturing.

There was to many place where the grammar was wrong, so I will go
through again, and change it manually (as appose to lots of search
replace).

New things are now:

Giants are now Biggly.
Dwarfs are dorfs, short sturdy creatures fond of drink and industry.
Incestues is now keeing it  in the family.
Men-at-Arms are Men-with-Arms.

--- a/MuchosLocalization/localization/english/buildings_l_english.yml
+++ b/MuchosLocalization/localization/english/buildings_l_english.yml
@@ -717,7 +717,7 @@
  building_holy_site_prophetic_mosque_01_desc:0 "$building_type_holy_site_prophetic_mosque_01_desc$"
  
  building_type_generic_university:0 "University"
- building_type_generic_university_desc:0 "#F A university is a place of higher learning, reserved for those of good standing and wealth who are deemed worthy enough. It attracts scholars and scientists who have dance-offs, study, scribe, and ultimately pool their knowledge within its walls.#!"
+ building_type_generic_university_desc:0 "#F A university is a place of higher learning, reserved for those of good standing and wealth who are deemed worthy enough. It attracts scholars and scientists who debate, study, scribe, and ultimately pool their knowledge within its walls.#!"
  building_generic_university:0 "$building_type_generic_university$"
  building_generic_university_desc:0 "$building_type_generic_university_desc$"
  
