--- a/MuchosLocalization/localization/english/culture/cultural_maa_innovations_l_english.yml
+++ b/MuchosLocalization/localization/english/culture/cultural_maa_innovations_l_english.yml
@@ -88,5 +88,5 @@
  innovation_repeating_crossbow:0 "Chu-ko-nu"
  innovation_repeating_crossbow_desc:0 "The repeating crossbow, known as Chu-ko-nu, is an ingenious invention with an easy-to-use mechanism that can be operated by anyone. What it lacks in range and firepower, it more than makes up for in rate of fire, making it an ideal weapon for defensive positions."
 
- innovation_men_at_arms:0 "Men-at-Arms"
+ innovation_men_at_arms:0 "Men-with-Arms"
  innovation_men_at_arms_desc:0 "Training and equipping standing armies that remain under the direct disposal of our rulers will be a stepping stone on the road to centralize our power."
