--- a/MuchosLocalization/localization/english/custom_localization/secrets_custom_loc_l_english.yml
+++ b/MuchosLocalization/localization/english/custom_localization/secrets_custom_loc_l_english.yml
@@ -6,7 +6,7 @@
  SecretDescription_lover:0 "has intimate relations with [ROOT.Secret.GetTargetCharacter.GetTitledFirstName]"
  SecretDescription_murder:0 "is the one behind [ROOT.Secret.GetTargetCharacter.GetTitledFirstNamePossessive] murder"
  SecretDescription_non_believer:0 "is a non-believer"
- SecretDescription_incest:0 "has had incestuous relations"
+ SecretDescription_incest:0 "has kept it in the family"
  SecretDescription_witch:0 "is a practitioner of witchcraft"
  SecretDescription_fallback:0 "has a terrible secret"
  SecretDescription_deviant_first_person:0 "am a sexual deviant"
@@ -16,7 +16,7 @@
  SecretDescription_lover_first_person:0 "have intimate relations with [ROOT.Secret.GetTargetCharacter.GetTitledFirstName]"
  SecretDescription_murder_first_person:0 "am the one behind [ROOT.Secret.GetTargetCharacter.GetTitledFirstNamePossessive] murder"
  SecretDescription_non_believer_first_person:0 "am a non-believer"
- SecretDescription_incest_first_person:0 "have had incestuous relations"
+ SecretDescription_incest_first_person:0 "have kept it in the family"
  SecretDescription_witch_first_person:0 "am a practitioner of witchcraft"
  SecretDescription_fallback_first_person:0 "have a terrible secret"
 
