--- a/MuchosLocalization/localization/english/death_reasons_l_english.yml
+++ b/MuchosLocalization/localization/english/death_reasons_l_english.yml
@@ -12,7 +12,7 @@
  death_great_pox:1 "died of [GetTrait('great_pox').GetName( CHARACTER.Self )]"
  death_ill:1 "died from being [GetTrait('ill').GetName( CHARACTER.Self )]"
  death_sickly:1 "died from being [GetTrait('sickly').GetName( CHARACTER.Self )]"
- death_giant:0 "died from complications related to gigantism"
+ death_giant:0 "died from complications related to being biggly"
  death_spindly:0 "died of heart failure"
  death_wheezing:0 "died of asphyxiation during a violent coughing attack "
  death_bleeder:0 "bled to death"
@@ -72,9 +72,9 @@
  death_carp_accident:0 "died in a tragic carp accident"
  death_whipping:0 "was whipped to death"
  death_whipping_killer:0 "was whipped to death by [TARGET_CHARACTER.GetUIName]"
- death_torture:0 "was pranked to death"
- death_torture_killer:0 "was pranked to death by [TARGET_CHARACTER.GetUIName]"
- death_torture_passive:0 "bled out after a lengthy prank session"
+ death_torture:0 "was tortured to death"
+ death_torture_killer:0 "was tortured to death by [TARGET_CHARACTER.GetUIName]"
+ death_torture_passive:0 "bled out after a lengthy torture session"
  death_childbirth:0 "died in childbirth"
  death_delivery:0 "died during delivery"
  death_treatment:1 "died due to a botched treatment"
@@ -114,6 +114,6 @@
  death_dog_attack:0 "was mauled to death by a dog"
  death_murder_known:0 "was murdered by [TARGET_CHARACTER.GetUIName]"
  death_murder_known_killer:0 "was murdered by [TARGET_CHARACTER.GetUIName]"
- death_literalist_debate:0 "suffered a heart attack after being utterly destroyed in a literalist dance-off"
- death_literalist_debate_killer:0 "suffered a heart attack after [TARGET_CHARACTER.GetUIName] utterly destroyed [CHARACTER.GetHerHim] in a literalist dance-off"
+ death_literalist_debate:0 "suffered a heart attack after being utterly destroyed in a literalist debate"
+ death_literalist_debate_killer:0 "suffered a heart attack after [TARGET_CHARACTER.GetUIName] utterly destroyed [CHARACTER.GetHerHim] in a literalist debate"
  death_hunting_accident_killer:0 "$death_murder_killer$"
