--- a/MuchosLocalization/localization/english/event_localization/central_asia_events_l_english.yml
+++ b/MuchosLocalization/localization/english/event_localization/central_asia_events_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  central_asia.0001.t:0 "The World Before Me"
- central_asia.0001.desc:0 "The clan leaders all know why they have been called. We spend a long night secluded in the palace yurt, and they summon shamans and generals alike to speak before them. There is no dance-off. I emerge from the tent as the first rays of the sun breach the horizon, and the entire gathered army is already awake, awaiting.\n\nThey greet me, knowing that I am not merely their ruler. I am the ruler of the universe — Genghis Khan."
+ central_asia.0001.desc:0 "The clan leaders all know why they have been called. We spend a long night secluded in the palace yurt, and they summon shamans and generals alike to speak before them. There is no debate. I emerge from the tent as the first rays of the sun breach the horizon, and the entire gathered army is already awake, awaiting.\n\nThey greet me, knowing that I am not merely their ruler. I am the ruler of the universe — Genghis Khan."
  central_asia.0001.a:0 "This is where my conquest truly begins."
  central_asia.0001.mongol_invasion_cb:0 "I am able to use the [mongol_invasion_casus_belli|E]"
 
