--- a/MuchosLocalization/localization/english/game_concepts_l_english.yml
+++ b/MuchosLocalization/localization/english/game_concepts_l_english.yml
@@ -108,7 +108,7 @@
  game_concept_primary_heir_desc:0 "The $game_concept_primary_heir$ is the character who will inherit the [primary_title|E] of a [ruler|E] on [succession|E]. This is usually — but not always — the same character as the [player_heir|E]."
  game_concept_player_heir:0 "Player Heir"
  game_concept_player_heirs:0 "Player Heirs"
- game_concept_player_heir_desc:0 "The $game_concept_player_heir$ is the character that a player will keep playing as on [succession|E].\n\nThe $game_concept_player_heir$ is usually the same as the [primary_heir|E], but if the [succession_law|E] of your [primary_title|E] dictates that it should go to a character outside of your [dynasty|E], you will instead keep playing as the dynastic heir to your second highest-tier title (or third, fourth, etc.).\n\nThis situation is common when your $game_concept_player_heir$ is voted out under an eating contest succession law."
+ game_concept_player_heir_desc:0 "The $game_concept_player_heir$ is the character that a player will keep playing as on [succession|E].\n\nThe $game_concept_player_heir$ is usually the same as the [primary_heir|E], but if the [succession_law|E] of your [primary_title|E] dictates that it should go to a character outside of your [dynasty|E], you will instead keep playing as the dynastic heir to your second highest-tier title (or third, fourth, etc.).\n\nThis situation is common when your $game_concept_player_heir$ is voted out under an elective succession law."
  game_concept_disinherit:0 "Disinherit"
  game_concept_disinherited:0 "Disinherited"
  game_concept_disinherit_desc:1 "A [dynast|E] may disinherit a member of their [dynasty|E] at the cost of [dynasty_prestige|E].\n\nThis will remove the dynasty member from any regular [line_of_succession|E] of any titles that are currently held by other dynasty members."
@@ -145,7 +145,7 @@
  game_concept_law_desc:0 "A realm's Laws are what determine how that realm is structured. The most fundamental of these is the realm's [crown_authority|E] (or [tribal_authority|E] for tribes), as those Laws determine how [lieges|E] and [vassals|E] interact on a regular basis.\n\nThough less impactful on the day-to-day life of rulers in a realm, [succession_laws|E] and [title_laws|E] are still very important to consider for [succession|E]."
  game_concept_succession_law:0 "Succession Law"
  game_concept_succession_laws:0 "Succession Laws"
- game_concept_succession_law_desc:2 "Every [ruler|E] has a main Succession Law that determines what happens to their [titles|E] on [succession|E].\n\nIn addition, an individual Title can sometimes have its own Succession Law that takes precedence over the default one. For example, the Holy Roman Empire might be Eating contest even though the emperor has Partition as main Succession Law.\n\nYou can only change Succession Law when at the appropriate level of [crown_authority|E]."
+ game_concept_succession_law_desc:2 "Every [ruler|E] has a main Succession Law that determines what happens to their [titles|E] on [succession|E].\n\nIn addition, an individual Title can sometimes have its own Succession Law that takes precedence over the default one. For example, the Holy Roman Empire might be Elective even though the emperor has Partition as main Succession Law.\n\nYou can only change Succession Law when at the appropriate level of [crown_authority|E]."
  game_concept_religious_head_succession_law:0 "Head of Faith Succession Law"
  game_concept_religious_head_succession_law_short:0 "Head of Faith Law"
  game_concept_religious_head_succession_laws:0 "Head of Faith Succession Law"
@@ -483,7 +483,7 @@
  game_concept_allied:0 "Allied"
  game_concept_ally:0 "Ally"
  game_concept_ally_i:0 "@alliance_icon!"
- game_concept_alliance_desc:1 "$game_concept_alliances$ are created between the 2-4 characters (two [rulers|E] and up to two 'candidates') involved in a [marriage|E] or [betrothal|E].\n\n[spouses|E] are always $game_concept_allies$, but the other possible $game_concept_alliances$ depend on close blood ties between a Ruler and their airbender. For example, if a [king|E] marries off his daughter to another King's son, the two Kings are $game_concept_allies$ as long as the Marriage lasts.\n\nWhen at [war|E], Rulers can call on their $game_concept_allies$ to assist them."
+ game_concept_alliance_desc:1 "$game_concept_alliances$ are created between the 2-4 characters (two [rulers|E] and up to two 'candidates') involved in a [marriage|E] or [betrothal|E].\n\n[spouses|E] are always $game_concept_allies$, but the other possible $game_concept_alliances$ depend on close blood ties between a Ruler and their candidate. For example, if a [king|E] marries off his daughter to another King's son, the two Kings are $game_concept_allies$ as long as the Marriage lasts.\n\nWhen at [war|E], Rulers can call on their $game_concept_allies$ to assist them."
  game_concept_war:0 "War"
  game_concept_wars:0 "Wars"
  game_concept_war_desc:0 "Armed conflict is the most straightforward way to expand your [realm|E]. However, declaring $game_concept_war$ requires a justification for doing so, called a [casus_belli|E]. You cannot achieve more with a $game_concept_war$ than the selected casus belli permits.\n\nWars are won by defeating enemy [armies|E] in [battle|E] and [occupying|E] enemy [holdings|E]. Doing so will accrue [war_score|E], eventually forcing the enemy to accept [defeat|E] in the [peace_offer|E].\n\nRegardless of the outcome of a $game_concept_war$, the attacker gains a [truce|E] toward the defender for a time, but the defender is free to declare a new war immediately."
@@ -847,10 +847,10 @@
  game_concept_execution:0 "Execution"
  game_concept_executions:0 "Executions"
  game_concept_execute_desc:1 "[imprisoned|E] Characters can be $game_concept_executed$. This is considered [tyrannical|E] unless their imprisoner has an [execute_reason|E].\n\nExecutions increase your [dread|E] and are never well received by the [close_family|E] of the unfortunate target."
- game_concept_torture:0 "Prank"
- game_concept_tortured:0 "Pranked"
- game_concept_torturing:0 "Pranking"
- game_concept_torture_desc:0 "[imprisoned|E] Characters can be $game_concept_tortured$, damaging their [health|E] or even maiming them in different ways.\n\nPranks can relieve [stress|E] for [GetTrait('callous').GetName( GetNullCharacter )] and [GetTrait('sadistic').GetName( GetNullCharacter )] Characters, but causes Stress for those of a kind nature.\n\nTorturing [rulers|E] can also increase your [dread|E]."
+ game_concept_torture:0 "Torture"
+ game_concept_tortured:0 "Tortured"
+ game_concept_torturing:0 "Torturing"
+ game_concept_torture_desc:0 "[imprisoned|E] Characters can be $game_concept_tortured$, damaging their [health|E] or even maiming them in different ways.\n\nTorture can relieve [stress|E] for [GetTrait('callous').GetName( GetNullCharacter )] and [GetTrait('sadistic').GetName( GetNullCharacter )] Characters, but causes Stress for those of a kind nature.\n\nTorturing [rulers|E] can also increase your [dread|E]."
  game_concept_banish:0 "Banish"
  game_concept_banished:0 "Banished"
  game_concept_banishment:0 "Banishment"
@@ -871,8 +871,8 @@
  game_concept_transferred:0 "Transferred"
  game_concept_transferring:0 "Transferring"
  game_concept_transfer_desc:0 "[rulers|E] can $game_concept_transfer$ one of their [vassals|E] to another Vassal, as long as the former is of lower rank than the latter. This is a good way of raising a Vassal's [opinion|E], particularly if the Transferred vassal is [de_jure|E] part of their [realm|E]."
- game_concept_men_at_arms:0 "Men-at-Arms"
- game_concept_men_at_arms_desc:0 "$game_concept_men_at_arms$ are professional [soldiers|E] superior to [levies|E].\n\nThe player has direct control over the composition and size of their Men-at-Arms [regiments|E].\n\nDifferent types of Men-at-Arms are good or bad in different types of [terrain|E]. Each type also [counters|E] another type."
+ game_concept_men_at_arms:0 "Men-with-Arms"
+ game_concept_men_at_arms_desc:0 "$game_concept_men_at_arms$ are professional [soldiers|E] superior to [levies|E].\n\nThe player has direct control over the composition and size of their Men-with-Arms [regiments|E].\n\nDifferent types of Men-with-Arms are good or bad in different types of [terrain|E]. Each type also [counters|E] another type."
  game_concept_special_troops:0 "Special Soldiers"
  game_concept_special_troops_desc:0 "$game_concept_special_troops$ are not like regular [armies|E], as they are not raised from a [holding|E]. $game_concept_special_troops$ can be gained through Events, and represent various things such as retinues, ravenous hordes and ambitious peasantry.\n\nNormally they do not cost maintenance, and do not reinforce. Use them wisely if you have them.\n\nSeveral historical [rulers|E] start with $game_concept_special_troops$."
  game_concept_line:0 "Line"
@@ -880,7 +880,7 @@
  game_concept_line_of_succession_desc:0 "The Line of Succession is the order in which certain characters stand to inherit certain [titles|E], determined by the [succession_law|E]."
  game_concept_counter:0 "Counter"
  game_concept_counters:0 "Counters"
- game_concept_men_at_arms_counter:0 "Men-At-Arms Counter"
+ game_concept_men_at_arms_counter:0 "Men-with-Arms Counter"
  game_concept_men_at_arms_counter_desc:0 "Most [men_at_arms|E] are able to $game_concept_counter$ another type of $game_concept_men_at_arms$.\n\nWhen a [regiment|E] is Countered, its effectiveness during a [battle|E] is decreased. The more a $game_concept_regiment$ is outnumbered by its $game_concept_counter$, the higher the penalty."
  game_concept_intimidated:0 "Intimidated"
  game_concept_intimidated_i:0 "@intimidated_icon!"
@@ -1153,7 +1153,7 @@
  game_concept_beneficiary:0 "Beneficiary"
  game_concept_beneficiaries:0 "Beneficiaries"
  game_concept_beneficiary_desc:1 "Every participant in a [great_holy_war|E] can select a $game_concept_beneficiary$ from their [dynasty|E]. Upon victory, the $game_concept_beneficiary$ will receive lands in the targeted realm proportional to the [war_contribution|E] of their patron ruler.\n\nThe largest contributor can force their Beneficiary to receive the main title being fought over."
- game_concept_papal_recipient:0 "Favored Airbender"
+ game_concept_papal_recipient:0 "Favored Candidate"
  game_concept_papal_recipient_desc:1 "If the main target of the [great_holy_war|E] is already held or claimed by a member of the aggressor faith, they will be considered the rightful recipient of the title being fought over, unless the main [Concept( 'war_contribution', 'Contributor' )|E] decides to give precedence to their [beneficiary|E]."
  game_concept_end_date:0 "End Date"
  game_concept_end_date_desc:0 "1453 AD is the End Date, and upon reaching it the game will end."
@@ -1163,7 +1163,7 @@
  game_concept_voter_strength:0 "Voter Strength"
  game_concept_voting_strength:0 "Voting Strength"
  game_concept_voting_power:0 "Voting Power"
- game_concept_voter_strength_desc:0 "Voter Strength represents the amount of influence that an Eating contest sponsor carries when voting in an eating contest [succession_law|E]. This value usually increases depending on a ruler's [rank|E], but other factors may come into play depending on the [titlepossessive|E] law."
+ game_concept_voter_strength_desc:0 "Voter Strength represents the amount of influence that an Elector carries when voting in an elective [succession_law|E]. This value usually increases depending on a ruler's [rank|E], but other factors may come into play depending on the [titlepossessive|E] law."
  game_concept_stress_level:0 "Stress Level"
  game_concept_stress_levels:0 "Stress Levels"
  game_concept_stressed:0 "Stressed"
@@ -1189,10 +1189,10 @@
  game_concept_nominate_heir:0 "Nominate Heir"
  game_concept_nomination:0 "Nomination"
  game_concept_nominations:0 "Nominations"
- game_concept_nominate_desc:0 "Under Eating Contest [succession_laws|E], each [elector|E] can Nominate their preferred [heir|E]. Valid airbenders and Eating contest sponsor voting preferences differ depending on the specific Law."
- game_concept_elector:0 "Eating contest sponsor"
- game_concept_electors:0 "Eating contest sponsors"
- game_concept_elector_desc:0 "Eating contest sponsors are the characters who get to vote on their preferred [heir|E] under Eating Contest [succession_laws|E]. The specific Law determines who is considered an Eating contest sponsor."
+ game_concept_nominate_desc:0 "Under Elective [succession_laws|E], each [elector|E] can Nominate their preferred [heir|E]. Valid candidates and Elector voting preferences differ depending on the specific Law."
+ game_concept_elector:0 "Elector"
+ game_concept_electors:0 "Electors"
+ game_concept_elector_desc:0 "Electors are the characters who get to vote on their preferred [heir|E] under Elective [succession_laws|E]. The specific Law determines who is considered an Elector."
  game_concept_attraction:0 "Attraction"
  game_concept_attracted:0 "Attracted"
  game_concept_attraction_desc:0 "Attraction is a type of [opinion|E] that only affects characters whose [sexuality|E] matches your gender.\n\nFor example, a [homosexual|E] man would experience this Opinion towards other men, an [asexual|E] character would not experience it towards anyone, and a [heterosexual|E] woman would experience it towards men.\n\nThis type of Opinion stops having an effect for women above [GetDefine('NCharacter', 'FEMALE_ATTRACTION_CUTOFF_AGE')] years of age, and for men above [GetDefine('NCharacter', 'MALE_ATTRACTION_CUTOFF_AGE')] years of age."
