--- a/MuchosLocalization/localization/english/gui/militaryview_l_english.yml
+++ b/MuchosLocalization/localization/english/gui/militaryview_l_english.yml
@@ -43,10 +43,10 @@
  MONTHLY_MAX_MAINTENANCE_VIEW:0 "([MilitaryView.GetAllRaisedTime])"
  MONTHLY_REINFORCEMENT_COST_LABEL:0 "Monthly Reinforcement"
  MV_MORE_THAN_FIVE_YEARS:1 "> #V 5 years#!"
- MEN_AT_ARMS_LABEL:0 "Men-at-Arms:"
+ MEN_AT_ARMS_LABEL:0 "Men-with-Arms:"
  TOTAL_MAINTENANCE_COST:0 "$VALUE$"
  TOTAL_REINFORCEMENT_COST_MAA:0 "$VALUE|1$"
- ADD_MEN_AT_ARMS_LABEL:0 "Create Men-at-Arms Regiment"
+ ADD_MEN_AT_ARMS_LABEL:0 "Create Men-with-Arms Regiment"
  MAA_COUNT_AND_CAP:0 "$CURRENT|V$/$MAX|V$"
  MAA_COUNT_AND_CAP_ABOVE_CAP:0 "$CURRENT|N$/$MAX|V$"
  MAA_COUNT_ABOVE_CAP:0 "$VALUE|V$ [men_at_arms|E] over cap limit"
