--- a/MuchosLocalization/localization/english/gui/specialinteractions_l_english.yml
+++ b/MuchosLocalization/localization/english/gui/specialinteractions_l_english.yml
@@ -22,7 +22,7 @@
  COWED_REASON:1 "[terrified_i][cowed|E] of you: $VALUE|=+0$"
  MARRYING_UP_REASON:0 "[recipient.GetShortUIName|U] is Marrying Up: $VALUE|=+0$"
  MARRYING_DOWN_REASON:0 "[recipient.GetShortUIName|U] is Marrying Down: $VALUE|=+0$"
- MARRYING_HEIR_REASON:1 "Your Airbender is [actor.GetShortUINamePossessive|U] [heir|E]: $VALUE|=+0$"
+ MARRYING_HEIR_REASON:1 "Your Candidate is [actor.GetShortUINamePossessive|U] [heir|E]: $VALUE|=+0$"
  MY_OWN_MARRIAGE_REASON:0 "[recipient.GetShortUINamePossessive] own Marriage: $VALUE|+0$"
  CLOSE_RELATIVE_REASON:0 "Close Relative: $VALUE|+0$"
  DEAR_TO_ME_REASON:0 "[secondary_recipient.GetShortUIName|U] is dear to [recipient.GetShortUIName]: $VALUE|+0$"
@@ -30,7 +30,7 @@
  ACTOR_RIVAL_TO_ME_REASON:0 "[recipient.GetShortUIName|U] is [actor.GetShortUINamePossessive] Rival: $VALUE|+0$"
  NEMESIS_TO_ME_REASON:0 "[secondary_recipient.GetShortUIName|U] is [recipient.GetShortUINamePossessive] Nemesis: $VALUE|+0$"
  ACTOR_NEMESIS_TO_ME_REASON:0 "[recipient.GetShortUIName|U] is [actor.GetShortUINamePossessive] Nemesis: $VALUE|+0$"
- MARRIAGE_DESPERATION:0 "Age of [recipient.GetShortUINamePossessive] Airbender: $VALUE|+=0$"
+ MARRIAGE_DESPERATION:0 "Age of [recipient.GetShortUINamePossessive] Candidate: $VALUE|+=0$"
  MARRY_CONSANGUINITY_REASON:0 "The marriage would be [incestuous|E]: $VALUE|+=0$"
  MATRILINEAL_WARNING:0 "@warning_icon!#X Children born of this Marriage will be of [CHARACTER.GetShortUINamePossessive] [dynasty|E] ('[CHARACTER.GetDynastyName]')!#!"
  MATRILINEAL_REASON:0 "Matrilineal Marriage: $VALUE|=+0$"
@@ -95,8 +95,8 @@
  AI_EXECUTE_REASON_MODIFIER:0 "Your Crime warrants Execution: $VALUE|=+0$"
  MARRY_AGE:0 "Age Considerations: $VALUE|+0$"
  AI_DYNASTY_PRESTIGE_REASON:0 "Your Dynasty's Level of Splendor: $VALUE|=+0$"
- AI_DYNASTY_PRESTIGE_REASON_SECONDARY:0 "Your airbender's Level of Splendor: $VALUE|=+0$"
- AI_DYNASTY_PRESTIGE_REASON_LOWBORN:0 "Your airbender is [lowborn|E]: $VALUE|=+0$"
+ AI_DYNASTY_PRESTIGE_REASON_SECONDARY:0 "Your Candidate's Level of Splendor: $VALUE|=+0$"
+ AI_DYNASTY_PRESTIGE_REASON_LOWBORN:0 "Your Candidate is [lowborn|E]: $VALUE|=+0$"
  LIEGE_REASON:0 "You are [recipient.GetHerHis] Liege: $VALUE|=+0$"
  FOREIGN_COURT_REASON:0 "[secondary_recipient.GetShortUIName|U] would move to a Foreign Court: $VALUE|=+0$"
  MARRY_LOW_FERTILITY_REASON:0 "The marriage will have Low [fertility|E]: $VALUE|+0$"
