--- a/MuchosLocalization/localization/english/lifestyles/perks_l_english.yml
+++ b/MuchosLocalization/localization/english/lifestyles/perks_l_english.yml
@@ -29,7 +29,7 @@
  fear_tax_perk_name:0 "Fear Tax"
  forever_infamous_perk_name:0 "Forever Infamous"
  prison_feudal_complex_perk_name:0 "Prison-Feudal Complex"
- torturer_perk_name:0 "Prank master"
+ torturer_perk_name:0 "Torturer"
  #Learning_name: Theology Tree
  faithful_perk_name:0 "Faithful"
  zealous_proselytizer_perk_name:0 "Zealous Proselytizer"
