--- a/MuchosLocalization/localization/english/modifiers/event_modifiers_l_english.yml
+++ b/MuchosLocalization/localization/english/modifiers/event_modifiers_l_english.yml
@@ -18,7 +18,7 @@
  witch_coven_desc:1 ""
  seeker_of_knowledge:0 "Seeker of Knowledge"
  diligent_student:0 "Diligent Student"
- recently_tortured:0 "Recently Pranked"
+ recently_tortured:0 "Recently Tortured"
  recently_blinded:0 "Recently Blinded"
  recently_castrated:0 "Recently Castrated"
  county_mediation_1:0 "Spouse Mediation"
