--- a/MuchosLocalization/localization/english/my_realm_window_l_english.yml
+++ b/MuchosLocalization/localization/english/my_realm_window_l_english.yml
@@ -55,8 +55,8 @@
  MRW_INHERITED_TITLES:0 "Inherited [titles|E]"
  MY_REALM_WINDOW_NO_HEIR_FLAVOR:1 "@warning_icon! #X You have no heir. The game will end after you die#!"
  MY_REALM_WINDOW_EXCEPTIONS:1 "[titles|E] with their own [title_succession|E]"
- MY_REALM_WINDOW_ELECTIONS:1 "Eating contests"
- MY_REALM_WINDOW_VOTE:2 "View Eating contest"
+ MY_REALM_WINDOW_ELECTIONS:1 "Elections"
+ MY_REALM_WINDOW_VOTE:2 "View Election"
  MY_REALM_WINDOW_VOTE_TOOLTIP:0 "#T Nominate Heir#!\n#I Click to [Concept( 'nominate_heir', 'Nominate an Heir' )|E]#!"
  MY_REALM_WINDOW_PARTITION_SHARE:2 "From [realm|E]'s [Character.GetActiveLawInGroupWithFlag('succession_order_laws').GetName]"
  MY_REALM_WINDOW_HEIR_NOT_MY_DYNASTY:0 "@warning_icon! #X Not part of my [dynasty|E]#!"
