--- a/MuchosLocalization/localization/english/nicknames_l_english.yml
+++ b/MuchosLocalization/localization/english/nicknames_l_english.yml
@@ -266,7 +266,7 @@
  nick_the_vanquisher:0 "the Vanquisher"
  nick_the_bloody:0 "the Bloody"
  nick_the_shy:0 "the Shy"
- nick_the_giant:0 "the Giant"
+ nick_the_giant:0 "the Biggly"
  nick_bad_hand:0 "Bad Hand"
  nick_the_little:0 "the Little"
  nick_the_one_eyed:0 "the One-eyed"
