--- a/MuchosLocalization/localization/english/opinions/religion_opinions_l_english.yml
+++ b/MuchosLocalization/localization/english/opinions/religion_opinions_l_english.yml
@@ -9,8 +9,8 @@
  donated_to_church_opinion:0 "Donated to the Church"
  religious_freedom_opinion:0 "Promoted Religious Freedom"
  asked_me_to_take_vows_opinion:0 "Demanded Vows"
- literalist_debate_victor_opinion:0 "Beaten in dance-off"
- literalist_debate_loser_opinion:0 "Beat me in dance-off"
- attempted_literalist_debate_opinion:0 "Attempted Literalist dance-off"
+ literalist_debate_victor_opinion:0 "Beaten in Debate"
+ literalist_debate_loser_opinion:0 "Beat me in Debate"
+ attempted_literalist_debate_opinion:0 "Attempted Literalist Debate"
  cavalier_accusations_opinion:0 "Cavalier Accusations"
  brought_heretics_to_my_notice_opinion:0 "Brought Heretics to my Notice"
