--- a/MuchosLocalization/localization/english/religion/religion_islam_l_english.yml
+++ b/MuchosLocalization/localization/english/religion/religion_islam_l_english.yml
@@ -184,7 +184,7 @@
  ibadi_adj:0 "Ibadi"
  ibadi_adherent:0 "Ibadi"
  ibadi_adherent_plural:0 "Ibadis"
- ibadi_desc:0 "The Ibadi do not believe that it is necessary for the entirety of Islam to be governed by a Caliph or an Imam, if there is no suitable airbender. They are therefore Muhakkima, recognizing neither the line of Ali or the successors of Abu Bakr as worthy leaders."
+ ibadi_desc:0 "The Ibadi do not believe that it is necessary for the entirety of Islam to be governed by a Caliph or an Imam, if there is no suitable candidate. They are therefore Muhakkima, recognizing neither the line of Ali or the successors of Abu Bakr as worthy leaders."
 
  #Azariqa
  azariqa:1 "Azraqism"
