--- a/MuchosLocalization/localization/english/traits_l_english.yml
+++ b/MuchosLocalization/localization/english/traits_l_english.yml
@@ -22,8 +22,8 @@
  trait_education_diplomacy_1_desc:0 "The Naive Appeaser has been somewhat educated in the art of diplomacy but is nevertheless more often an embarrassment to themselves and those around them than not."
  trait_education_diplomacy_1_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] has been somewhat educated in the art of diplomacy but is nevertheless more often an embarrassment to [ROOT.GetCharacter.GetHerselfHimself] and those around [ROOT.GetCharacter.GetHerHim] than not."
  trait_education_diplomacy_2:0 "Adequate Bargainer"
- trait_education_diplomacy_2_desc:0 "Things often work out in favor of the Adequate Bargainer, but whether this is due to their skill in diplomacy or luck is up for dance-off."
- trait_education_diplomacy_2_character_desc:0 "Things often work out in favor of [ROOT.GetCharacter.GetFirstNameNoTooltip], but whether this is due to [ROOT.GetCharacter.GetHerHis] skill in diplomacy or luck is up for dance-off."
+ trait_education_diplomacy_2_desc:0 "Things often work out in favor of the Adequate Bargainer, but whether this is due to their skill in diplomacy or luck is up for debate."
+ trait_education_diplomacy_2_character_desc:0 "Things often work out in favor of [ROOT.GetCharacter.GetFirstNameNoTooltip], but whether this is due to [ROOT.GetCharacter.GetHerHis] skill in diplomacy or luck is up for debate."
  trait_education_diplomacy_3:0 "Charismatic Negotiator"
  trait_education_diplomacy_3_desc:0 "A master of persuasive rhetoric and the nuances of diplomacy; the Charismatic Negotiator is an excellent diplomat."
  trait_education_diplomacy_3_character_desc:0 "A master of persuasive rhetoric and the nuances of diplomacy; [ROOT.GetCharacter.GetFirstNameNoTooltip] is an excellent diplomat."
@@ -151,7 +151,7 @@
  trait_seducer_female:0 "Seductress"
  trait_seducer_desc:0 "It is not difficult to desire. The true challenge is #EMP to be#! desired."
  
- trait_torturer:0 "Prank master"
+ trait_torturer:0 "Torturer"
  trait_torturer_desc:0 "Inflicting pain. Holding someone's life in your hands. This is true power."
  
  trait_whole_of_body:0 "Whole of Body"
@@ -545,10 +545,10 @@
  trait_stuttering:0 "Stuttering"
  trait_stuttering_desc:0 "Finishing a sentence quickly is not this character's strong suit."
  trait_stuttering_character_desc:0 "Finishing a sentence quickly is not [ROOT.GetCharacter.GetFirstNamePossessiveNoTooltip] strong suit."
- trait_dwarf:0 "Dwarf"
- trait_dwarf_desc:0 "This character is afflicted by a genetic disorder that stunts their growth."
- trait_dwarf_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] is afflicted by a genetic disorder that stunts [ROOT.GetCharacter.GetHerHis] growth."
- trait_giant:0 "Giant"
+ trait_dwarf:0 "Dorf"
+ trait_dwarf_desc:0 "A Short and sturdy creature fond of drink and industry."
+ trait_dwarf_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] is a short and sturdy creature fond of drink and industry."
+ trait_giant:0 "Biggly"
  trait_giant_desc:1 "Others have to crane their necks, and rein in their awe, as this character walks by."
  trait_giant_character_desc:0 "Others have to crane their necks, and rein in their awe, as [ROOT.GetCharacter.GetFirstNameNoTooltip] walks by."
  trait_inbred:0 "Inbred"
@@ -695,7 +695,7 @@
  trait_sodomite:0 "Sodomite"
  trait_sodomite_desc:0 "This character is known for having sexual relations with people of their own gender."
  trait_sodomite_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] is known for having sexual relations with people of [ROOT.GetCharacter.GetHerHis] own gender."
- trait_incestuous:0 "Incestuous"
+ trait_incestuous:0 "Keeping it in the family"
  trait_incestuous_desc:0 "This character is known for having sexual relations with relatives."
  trait_incestuous_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] is known for having sexual relations with relatives."
  trait_adulterer:0 "Adulterer"
