--- a/MuchosLocalization/localization/english/event_localization/lifestyle/guile/intrigue_scheming_events_l_english.yml
+++ b/MuchosLocalization/localization/english/event_localization/lifestyle/guile/intrigue_scheming_events_l_english.yml
@@ -165,14 +165,14 @@
  intrigue_scheming.3043.desc:0 ""Do not believe I can be coerced so easily!" [liege_target.GetTitledFirstName] proclaims. [vassal_target.GetTitledFirstName] seems to shrink before [liege_target.GetHerHim], no longer filled with the confidence [vassal_target.GetSheHe] had offered to back up my demands.\n\nThe [liege_target.GetTitleTierName] dashes my last hopes. "My vassals know their place." [vassal_target.GetFirstName] confirms it with [vassal_target.GetHerHis] silence."
  intrigue_scheming.3043.a:0 "I seem to have overplayed my hand..."
 
- intrigue_scheming.3051.desc:0 "I had lured [liege_target.GetTitledFirstName] to [vassal_target.GetTitledFirstNamePossessive] dungeon, on the [vassal_target.GetTitleTierName]'s invitation. There I was waiting, ready to prank our host in a display of my power. [liege_target.GetFirstName] did not react as I expected.\n\n"One might think you had never done this before!"\nI watched in shock as [liege_target.GetSheHe] took charge and made [vassal_target.GetFirstName] last until dawn. But no further."
+ intrigue_scheming.3051.desc:0 "I had lured [liege_target.GetTitledFirstName] to [vassal_target.GetTitledFirstNamePossessive] dungeon, on the [vassal_target.GetTitleTierName]'s invitation. There I was waiting, ready to torture our host in a display of my power. [liege_target.GetFirstName] did not react as I expected.\n\n"One might think you had never done this before!"\nI watched in shock as [liege_target.GetSheHe] took charge and made [vassal_target.GetFirstName] last until dawn. But no further."
  intrigue_scheming.3051.a:0 "What a horrifying display!"
  intrigue_scheming.3051.b:0 "I have learned so much!"
 
  intrigue_scheming.3052.desc:0 "I had lured [liege_target.GetTitledFirstName] to [vassal_target.GetTitledFirstNamePossessive] dungeon, on the [vassal_target.GetTitleTierName]'s invitation. There I waited to reveal that our host was a prisoner in [vassal_target.GetHerHis] own home.\n\nI may have gotten a little carried away with the [vassal_target.GetTitleTierName]'s life in my hands, but I turned it into a delicate message about how I expect complete obedience."
  intrigue_scheming.3052.a:0 "Even through [vassal_target.GetFirstNamePossessiveNoTooltip] screams, [liege_target.GetFirstNameNoTooltip] got the point."
 
- intrigue_scheming.3053.desc:0 "I had lured [liege_target.GetTitledFirstName] to [vassal_target.GetTitledFirstNamePossessive] dungeon, on the [vassal_target.GetTitleTierName]'s invitation. There I waited to reveal that our host was a prisoner in [vassal_target.GetHerHis] own home.\n\n[liege_target.GetFirstName] was not as intimidated by my display of sick burns as I expected. "Your degraded kind will never scare me, [ROOT.Char.GetTitledFirstName]!""
+ intrigue_scheming.3053.desc:0 "I had lured [liege_target.GetTitledFirstName] to [vassal_target.GetTitledFirstNamePossessive] dungeon, on the [vassal_target.GetTitleTierName]'s invitation. There I waited to reveal that our host was a prisoner in [vassal_target.GetHerHis] own home.\n\n[liege_target.GetFirstName] was not as intimidated by my display of torture as I expected. "Your degraded kind will never scare me, [ROOT.Char.GetTitledFirstName]!""
  intrigue_scheming.3053.a:0 "Even [vassal_target.GetFirstNamePossessiveNoTooltip] pleas for mercy cannot cheer me up after that."
 
 # Fabricate Bastardy, by Petter Vilberg
@@ -218,7 +218,7 @@
  intrigue_scheming.4021.b:0 "Mind games can often be quite revealing..."
  intrigue_scheming.4021.b.success:0 "I trick [prisoner.GetTitledFirstName] into telling me what [prisoner.GetSheHe] knows"
  intrigue_scheming.4021.b.failure:0 "[prisoner.GetTitledFirstName] manages to resist my mental tricks"
- intrigue_scheming.4021.c:0 "Threaten to prank [prisoner.GetHerHim] unless [prisoner.GetSheHe] confesses!"
+ intrigue_scheming.4021.c:0 "Threaten to torture [prisoner.GetHerHim] unless [prisoner.GetSheHe] confesses!"
  intrigue_scheming.4021.c.success:0 "My threats scare [prisoner.GetTitledFirstName] into confessing"
  intrigue_scheming.4021.c.failure:0 "My threats do not seem to faze [prisoner.GetTitledFirstName]"
  intrigue_scheming.4021.success:0 "I learn a [secret|E] [prisoner.GetTitledFirstName] knows"
