--- a/MuchosLocalization/localization/english/event_localization/lifestyle/statecraft/diplomacy_majesty_events_l_english.yml
+++ b/MuchosLocalization/localization/english/event_localization/lifestyle/statecraft/diplomacy_majesty_events_l_english.yml
@@ -58,7 +58,7 @@
  diplomacy_majesty.4030.c:0 "Simply thinking like this will be advantageous."
 
  diplomacy_majesty.4031.t:1 "$diplomacy_majesty.4030.t$: Influence"
- diplomacy_majesty.4031.desc:0 "After many nights in contemplation I have devised a solid strategy for proving my point in a dance-off.\n\nI will to start from a strong position by adopting a popular stance on a topic that is unassailable, and from that position I will attack my opponent's arguments and point out all of their flaws.\n\nBy doing this I will strip away all possible solutions to a problem... all except for the one I favor, that is."
+ diplomacy_majesty.4031.desc:0 "After many nights in contemplation I have devised a solid strategy for proving my point in a debate.\n\nI will to start from a strong position by adopting a popular stance on a topic that is unassailable, and from that position I will attack my opponent's arguments and point out all of their flaws.\n\nBy doing this I will strip away all possible solutions to a problem... all except for the one I favor, that is."
  diplomacy_majesty.4031.a:0 "This technique will win people over to my side."
 
  diplomacy_majesty.4032.t:1 "$diplomacy_majesty.4030.t$: Unpredictable Engagements"
@@ -66,7 +66,7 @@
  diplomacy_majesty.4032.a:0 "At least this failure has not led to loss of life."
 
  diplomacy_majesty.4033.t:0 "Supply Chain of Ideas"
- diplomacy_majesty.4033.desc:0 "Today [thinker.GetTitledFirstName] approached me with an interesting idea. [thinker.GetSheHe|U] says it can be useful to think of a dance-off in court like a pitched battle. Different actors are seeking different goals, each trying to steer the conversation to their advantage, but only one will win."
+ diplomacy_majesty.4033.desc:0 "Today [thinker.GetTitledFirstName] approached me with an interesting idea. [thinker.GetSheHe|U] says it can be useful to think of a debate in court like a pitched battle. Different actors are seeking different goals, each trying to steer the conversation to their advantage, but only one will win."
  diplomacy_majesty.4033.a:0 "[thinker.GetSheHe|U] has some fascinating ideas on diplomacy!"
 
  # Lure of Language
@@ -131,17 +131,17 @@
  diplomacy_majesty_special.1010.mapped_territory.desc:0 "what lies beyond the edge of mapped territory."
  diplomacy_majesty_special.1010.heroism.desc:0 "whether heroism is bravery or folly."
  diplomacy_majesty_special.1010.end.desc:0 "We never get anywhere, but repeat the same arguments over and over...\n\nEnough is enough. The next time the subject comes up must be last."
- diplomacy_majesty_special.1010.o.tt:1 "You will dance-off [debater.GetFirstNameNoTooltip] in the near future"
+ diplomacy_majesty_special.1010.o.tt:1 "You will debate [debater.GetFirstNameNoTooltip] in the near future"
  diplomacy_majesty_special.1010.a:0 "Extensively read up on the topic to prepare."
  diplomacy_majesty_special.1010.a.success.desc:0 "I increase my understanding of the subject"
- diplomacy_majesty_special.1010.a.success.tt:1 "You increase your chance of success in the final dance-off by #P 20%#!"
- diplomacy_majesty_special.1010.a.success.message:0 "My studies went well and now I am more prepared for the final dance-off."
+ diplomacy_majesty_special.1010.a.success.tt:1 "You increase your chance of success in the final debate by #P 20%#!"
+ diplomacy_majesty_special.1010.a.success.message:0 "My studies went well and now I am more prepared for the final debate."
  diplomacy_majesty_special.1010.a.failure.desc:0 "I wear myself out"
- diplomacy_majesty_special.1010.a.failure.tt:1 "You decrease your chance of success in the final dance-off by #N 20%#!"
+ diplomacy_majesty_special.1010.a.failure.tt:1 "You decrease your chance of success in the final debate by #N 20%#!"
  diplomacy_majesty_special.1010.a.failure.message:0 "I wore myself out studying and do not remember much of anything."
  diplomacy_majesty_special.1010.b:0 "Studying my opponent might give me an edge..."
  diplomacy_majesty_special.1010.b.success.desc:0 "I increase my understanding of [debater.GetTitledFirstNameNoTooltip]"
- diplomacy_majesty_special.1010.b.success.tt:1 "You will receive a hint about which tactic to pick in the final dance-off"
+ diplomacy_majesty_special.1010.b.success.tt:1 "You will receive a hint about which tactic to pick in the final debate"
  diplomacy_majesty_special.1010.c:0 "Some rest will make me ready for conflict."
  diplomacy_majesty_special.1010.d:0 "I'll show that [debater.Custom('InsultNoun')] who is in charge!"
  diplomacy_majesty_special.1010.e:0 "It is easier to just let [debater.GetHerHim] win."
@@ -155,9 +155,9 @@
  diplomacy_majesty_special.1011.a.flavor:0 "To achieve this, I will need to present my ideas in a way [debater.GetFirstNameNoTooltip] finds agreeable..."
  diplomacy_majesty_special.1011.b:0 "I want to crush [debater.GetHerHim] in front of everyone!"
  diplomacy_majesty_special.1011.b.flavor:0 "To achieve this, I will need to exploit one of [debater.GetFirstNamePossessiveNoTooltip] character flaws to stop [debater.GetHerHim] from thinking rationally..."
- diplomacy_majesty_special.1011.a.desc:0 "Possible outcomes of the final dance-off"
- diplomacy_majesty_special.1011.a.success.desc:0 "If I win the final dance-off"
- diplomacy_majesty_special.1011.a.failure.desc:0 "If I lose the final dance-off"
+ diplomacy_majesty_special.1011.a.desc:0 "Possible outcomes of the final debate"
+ diplomacy_majesty_special.1011.a.success.desc:0 "If I win the final debate"
+ diplomacy_majesty_special.1011.a.failure.desc:0 "If I lose the final debate"
  diplomacy_majesty_special.1011.b.rival:0 "Might become my rival"
 
  diplomacy_majesty_special.1012.desc:0 "Keeping in mind what I know about [debater.GetFirstNamePossessive] character, I believe the best way to win [debater.GetHerHim] over is..."
@@ -208,5 +208,5 @@
  diplomacy_majesty_special.1016.end.desc:0 "\n\nIt did not matter that I was right – [debater.GetFirstName] wrapped the onlookers around [debater.GetHerHis] finger and they accepted [debater.GetHerHis] words without question."
  diplomacy_majesty_special.1016.a:0 "How embarrassing..."
 
- diplomacy_majesty_special.1050.title:0 "Dance-off Ended Inconclusively"
+ diplomacy_majesty_special.1050.title:0 "Debate Ended Inconclusively"
  diplomacy_majesty_special.1050.message:0 "I never got the chance to try my debate skills against [debater.GetTitledFirstName]."
