--- a/MuchosLocalization/localization/english/event_localization/schemes/claim_throne/claim_throne_ongoing_events_l_english.yml
+++ b/MuchosLocalization/localization/english/event_localization/schemes/claim_throne/claim_throne_ongoing_events_l_english.yml
@@ -27,6 +27,6 @@
  claim_throne_ongoing.1005.b:0 "I do not make mistakes. You will all follow the writ."
 
  claim_throne_ongoing.1006.t:0 "Staunch Support"
- claim_throne_ongoing.1006.desc:0 "As with so many other things, my [ROOT.Char.Custom2('RelationToMe', SCOPE.sC('friend'))], [friend.GetTitledFirstName], sees eye to eye with me on the matter that [target.GetTitledFirstName] is not fit to rule [target_title.GetNameNoTier].\n\n"I can think of far better airbenders," [friend.GetSheHe] lets me know in confidence. "And you stand first among them. Give the word, and you have my support.""
+ claim_throne_ongoing.1006.desc:0 "As with so many other things, my [ROOT.Char.Custom2('RelationToMe', SCOPE.sC('friend'))], [friend.GetTitledFirstName], sees eye to eye with me on the matter that [target.GetTitledFirstName] is not fit to rule [target_title.GetNameNoTier].\n\n"I can think of far better candidates," [friend.GetSheHe] lets me know in confidence. "And you stand first among them. Give the word, and you have my support.""
  claim_throne_ongoing.1006.a:0 "Friendship is the most honorable form of loyalty."
  claim_throne_ongoing.1006.b:0 "Spend your efforts letting others know how suitable I am."
