--- a/MuchosLocalization/localization/english/event_localization/stress_events/stress_trait_ongoing_events_l_english.yml
+++ b/MuchosLocalization/localization/english/event_localization/stress_events/stress_trait_ongoing_events_l_english.yml
@@ -22,7 +22,7 @@
  overworking_learning_modifier_desc:0 "$overworking_stewardship_modifier_desc$"
  stress_trait_ongoing.0506.t:0 "Sweet Relief"
  stress_trait_ongoing.0506.desc_leper:0 "This wasting disease eats at my body slowly, flaking my flesh away day by day. A [ROOT.GetCharacter.GetTitleAsNameNoTooltip] I may be, but sometimes I fear my subjects look at me and see naught but a leper."
- stress_trait_ongoing.0506.desc_gout_ridden:0 "This throbbing pain in my limbs aches so, hours of slow-blooming agony crippling me day after day. I sometimes wonder if it would be better or worse if it were consistent, rather than having to ride the wave of torment from dull throb to epic burn and back each time."
+ stress_trait_ongoing.0506.desc_gout_ridden:0 "This throbbing pain in my limbs aches so, hours of slow-blooming agony crippling me day after day. I sometimes wonder if it would be better or worse if it were consistent, rather than having to ride the wave of torment from dull throb to searing torture and back each time."
  stress_trait_ongoing.0506.desc_cancer:0 "Weeks drag by, a waiting game for this shooting pain or that. Some days are tolerable, but others I can hardly move or talk, and my breathe comes slower and slower. I can feel my remaining time on Earth falling away from me, robbed by this cancerous growth killing my body."
  stress_trait_ongoing.0506.desc_disfigured:1 "My wounds may have healed outwardly, but inwardly, the agony of my disfigurement still burns. I trace the path of old scars with one finger, and the memory of misery comes flooding back."
  stress_trait_ongoing.0506.desc_maimed:0 "I cough, hacking up a gobbet of phlegmy-blood. I don't even know if that's a new problem or not, not with the constant agony wracking my maimed, ruined body."
