--- a/MuchosLocalization/localization/english/gui/title_view_l_english.yml
+++ b/MuchosLocalization/localization/english/gui/title_view_l_english.yml
@@ -27,7 +27,7 @@
  TITLE_VIEW_NO_CLAIMANTS:0 "Cannot have claimants"
  TITLE_VIEW_NO_CLAIMANTS_TOOLTIP:0 "#T $TITLE_VIEW_NO_CLAIMANTS$\n#!Some [titles|E] cannot have [claimants|E]: \n$BULLET_WITH_TAB$All [baronies|E]\n$BULLET_WITH_TAB$[mercenary_company|E] Titles\n$BULLET_WITH_TAB$[holy_order|E] Titles\n$BULLET_WITH_TAB$[head_of_faith|E] Titles"
  TITLE_VIEW_TITLE_HISTORY_LABEL:2 "History of the [Title.GetBaseName]"
- TITLE_VIEW_SHOW_ELECTION_TT:1 "#T Show Eating contest  Window#!"
+ TITLE_VIEW_SHOW_ELECTION_TT:1 "#T Show Election Window#!"
  TITLE_VIEW_CLEAR_LAWS:0 "Remove Law"
  TITLE_VIEW_CLEAR_LAWS_TOOTLIP_TITLE:0 "#T Clear [title_succession|E] Law#!"
  TITLE_VIEW_CLEAR_CLICK:0 "#I Click to clear the [title_succession|E] Law#!"
@@ -144,7 +144,7 @@
  TITLE_VIEW_DE_JURE_CAPITAL:0 "[de_jure_capital|E]:"
  TITLE_VIEW_DE_JURE_PART_OF:1 "[de_jure|E] Part of:"
  TITLE_VIEW_TITLE_ADD_LAW_LABEL:0 "Add [succession_law|E]"
- TITLE_VIEW_TITLE_ADD_LAW_INFO:2 "Add a [title_specific_succession|E] [succession_law|E] to [Title.GetName].\n\nThis $game_concept_law$ will only apply to this specific [title|E] and not affect any other $game_concept_titles$ in your [realm|E].\n\n[rulers|E] of at least [king|E]-[title_tier|E] may take the $adopt_special_succession_decision$ [decision|E] instead, if they have access to a cultural eating contest $game_concept_succession$."
+ TITLE_VIEW_TITLE_ADD_LAW_INFO:2 "Add a [title_specific_succession|E] [succession_law|E] to [Title.GetName].\n\nThis $game_concept_law$ will only apply to this specific [title|E] and not affect any other $game_concept_titles$ in your [realm|E].\n\n[rulers|E] of at least [king|E]-[title_tier|E] may take the $adopt_special_succession_decision$ [decision|E] instead, if they have access to a cultural elective $game_concept_succession$."
  TITLE_VIEW_SHOW_ADD_LAWS:0 "Add Laws"
  TITLE_VIEW_TITLE_ADD_LAW_CONFIRM:0 "Add Law"
  TITLE_VIEW_TITLE_ADD_LAW_POSSIBLE_LAWS:0 "Possible Succession Laws"
