--- a/MuchosLocalization/localization/english/modifiers/intrigue_lifestyle_modifiers_l_english.yml
+++ b/MuchosLocalization/localization/english/modifiers/intrigue_lifestyle_modifiers_l_english.yml
@@ -57,6 +57,6 @@
  intrigue_picky_about_partners_desc:0 "This character is notoriously picky about who they will entertain having a relationship with."
 
  dark_insights_prowess_modifier:0 "Dark Insights: Prowess"
- dark_insights_prowess_modifier_desc:0 "Through the tools of the prankster, this character has learned much about inflicting pain and extracting one's desire."
+ dark_insights_prowess_modifier_desc:0 "Through the tools of the torturer, this character has learned much about inflicting pain and extracting one's desire."
  dark_insights_intrigue_modifier:0 "Dark Insights: Intrigue"
  dark_insights_intrigue_modifier_desc:0 "$dark_insights_prowess_modifier_desc$"
