--- a/MuchosLocalization/localization/english/opinions/murder_opinions_l_english.yml
+++ b/MuchosLocalization/localization/english/opinions/murder_opinions_l_english.yml
@@ -19,8 +19,8 @@
  executed_my_countryman_modifier:0 "Executed my Subject"
  executed_guest_modifier:0 "Executed another Guest"
 
- tortured_family_member:0 "Pranked Family Member"
- tortured_me:0 "Pranked Me"
+ tortured_family_member:0 "Tortured Family Member"
+ tortured_me:0 "Tortured Me"
  blinded_family_member:0 "Blinded Family Member"
  blinded_me:0 "Blinded Me"
  castrated_family_member:0 "Castrated Family Member"
